# ircc-processing-times

./: .gitignore  ASTRO_HANDOFF.md  README.md
.github/workflows/: scrape.yml
devvit-app/: README.md  devvit.json  devvit.yaml  package-lock.json  package.json  tsconfig.json  vite.config.server.ts
devvit-app/src/: main.tsx
devvit-app/src/server/: index.ts
devvit-app/webroot/: app.js  index.html  style.css
scraper/: processing_times.db  pyproject.toml
scraper/data/: countries.json  latest.json  meta.json
scraper/data/history/: AD.json  AE.json  AF.json  AG.json  AI.json  AL.json  AM.json  AO.json  AR.json  AT.json  AU.json  AW.json  AZ.json  BA.json  BB.json  BD.json  BE.json  BF.json  BG.json  BH.json  BI.json  BJ.json  BM.json  BN.json  BO.json  BQ.json  BR.json  BS.json  BT.json  BW.json  BY.json  BZ.json  CA.json  CD.json  CF.json  CG.json  CH.json  CI.json  CL.json  CM.json  (+170 more)
scraper/src/: config.py  db.py  exporter.py  parser.py  scrape.py
scraper/src/fetchers/: http_fetcher.py  playwright_fetcher.py
scraper/tests/: test_parser.py
scraper/tests/fixtures/: sample_ptime.json
website/: astro.config.mjs  package-lock.json  package.json
website/src/components/: BigNumber.astro  CountryCard.astro  DataTable.astro  HistoryChart.astro  LastUpdated.astro  SEOHead.astro  SearchBar.astro  Sparkline.astro  TrendBadge.astro
website/src/layouts/: Base.astro
website/src/pages/: about.astro  index.astro
website/src/pages/processing-times/: [country].astro  index.astro
website/src/styles/: global.css
website/src/utils/: countries.ts  formatting.ts
