[project]
name = "ircc-scraper"
version = "0.1.0"
description = "IRCC visa processing time scraper"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27",
]

[project.optional-dependencies]
playwright = [
    "playwright>=1.40",
]
dev = [
    "pytest>=8.0",
]

[project.scripts]
scrape = "src.scrape:main"
